# ChangeLog for net-misc/l7-filter
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/l7-filter/ChangeLog,v 1.2 2004/08/28 15:27:08 dholm Exp $

  28 Aug 2004; David Holm <dholm@gentoo.org> l7-filter-0.9.1.ebuild:
  Added to ~ppc.

*l7-filter-0.9.1 (17 Aug 2004)

  17 Aug 2004; Daniel Black <dragonheart@gentoo.org> +metadata.xml,
  +l7-filter-0.9.1.ebuild:
  Initial import. Ebuild with the grateful help of S.Caglar Onur
  <caglar.onur@tubitak.gov.tr> to in bug #59121
