@@ -1,1 +1,2 @@
 MD5 6190f1152bf243bb5e30cf9d0592928f netfilter-layer7-v0.9.1.tar.gz 38606
+MD5 292ef3578eacec54efcd0eb122e063a7 kernel-2.6-layer7-0.9.1+working_with_2.6.9.patch 58525
