@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/l7-filter
 # Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/l7-filter/ChangeLog,v 1.2 2004/08/28 15:27:08 dholm Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/l7-filter/ChangeLog,v 1.3 2004/12/02 11:38:54 dragonheart Exp $
+
+  02 Dec 2004; Daniel Black <dragonheart@gentoo.org> l7-filter-0.9.1.ebuild:
+  Fixes for bug #69279 kernel 2.6.9 support. bug #65770 - kernel 2.4 support.
+  Thanks to John Barberio <barberio@lineone.net> and Jean Blignaut
+  <jean@megaweb.biz>
 
   28 Aug 2004; David Holm <dholm@gentoo.org> l7-filter-0.9.1.ebuild:
   Added to ~ppc.
